--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Woponese_ | Online Gaming",
+  "name": "woponese_nuxt",
   "version": "1.0.0",
   "description": "My unreal Nuxt.js project",
   "author": "porith",
